--- a/composer.json
+++ b/composer.json
@@ -13,10 +13,11 @@
         "php": ">=5.5",
         "exsyst/io": "dev-master",
         "exsyst/worker": "dev-master",
-        "symfony/config": "~2.3|~3.0",
-        "symfony/dependency-injection": "~2.3|~3.0",
-        "symfony/framework-bundle": "~2.3|~3.0",
-        "symfony/http-kernel": "~2.3|~3.0"
+        "symfony/config": "~2.6|~3.0",
+        "symfony/console": "~2.6|~3.0",
+        "symfony/dependency-injection": "~2.6|~3.0",
+        "symfony/framework-bundle": "~2.6|~3.0",
+        "symfony/http-kernel": "~2.6|~3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4",
