Change the package type (to symfony-bundle)

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "exsyst/worker-bundle",
-    "type": "library",
+    "type": "symfony-bundle",
     "description": "Integrates the Worker component into Symfony",
     "license": "Apache-2.0",
     "authors": [
